--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 			<div class="row">
 			<div class="col-xl-6 col-lg-6 col-md-6 col-xs-12" id="block12_1">
 				<form id="form" method="post">
-					<input type="text" id="TEX" size="15" name="name" autocomplete="off" placeholder="Имя" required />
+					<input type="text" id="TEX" size="15" name="name" autocomplete="off" placeholder="Имя" required /><br><br>
 					<input type="text" name="phone" size="15" autocomplete="off" placeholder="Телефон" pattern="[0-9]{11,11}" required /><br>
 <BR>
 	<div id="seg" >Сегодня в </div>
